// protoc --go_out=. --go_opt=paths=source_relative messages.proto

edition = "2023";
package producer;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "./producer";

message AggregatedRecord {
  repeated string partition_key_table     = 1;
  repeated Record records                 = 3;
}

message Record {
  uint64 partition_key_index = 1 [features.field_presence = LEGACY_REQUIRED];
  bytes  data                = 3 [features.field_presence = LEGACY_REQUIRED];
}
