package producer

import (
	"testing"

	"github.com/stretchr/testify/assert"
	"google.golang.org/protobuf/proto"
)

func TestMessage(t *testing.T) {
	aggregatedRecord := AggregatedRecord_builder{
		PartitionKeyTable: []string{"key1"},
		Records: []*Record{
			Record_builder{
				PartitionKeyIndex: proto.Uint64(0),
				Data:              []byte("{\"group_id\": \"one\", \"word\": \"xxxxxx\", \"time_unix\": 1746421505}"),
			}.Build(),
			Record_builder{
				PartitionKeyIndex: proto.Uint64(0),
				Data:              []byte("{\"group_id\": \"two\", \"word\": \"yyyyyy\", \"time_unix\": 1751872027}}"),
			}.Build(),
			Record_builder{
				PartitionKeyIndex: proto.Uint64(0),
				Data:              []byte("{\"group_id\": \"three\", \"word\": \"zzzzzz\", \"time_unix\": 1757408949}}"),
			}.Build(),
		},
	}.Build()

	dataBytes, _ := proto.Marshal(aggregatedRecord)

	rawBytes := []byte{
		0x0a, 0x04, 0x6b, 0x65, 0x79, 0x31, 0x1a, 0x42, 0x08, 0x00, 0x1a, 0x3e, 0x7b, 0x22, 0x67, 0x72,
		0x6f, 0x75, 0x70, 0x5f, 0x69, 0x64, 0x22, 0x3a, 0x20, 0x22, 0x6f, 0x6e, 0x65, 0x22, 0x2c, 0x20,
		0x22, 0x77, 0x6f, 0x72, 0x64, 0x22, 0x3a, 0x20, 0x22, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x22,
		0x2c, 0x20, 0x22, 0x74, 0x69, 0x6d, 0x65, 0x5f, 0x75, 0x6e, 0x69, 0x78, 0x22, 0x3a, 0x20, 0x31,
		0x37, 0x34, 0x36, 0x34, 0x32, 0x31, 0x35, 0x30, 0x35, 0x7d, 0x1a, 0x43, 0x08, 0x00, 0x1a, 0x3f,
		0x7b, 0x22, 0x67, 0x72, 0x6f, 0x75, 0x70, 0x5f, 0x69, 0x64, 0x22, 0x3a, 0x20, 0x22, 0x74, 0x77,
		0x6f, 0x22, 0x2c, 0x20, 0x22, 0x77, 0x6f, 0x72, 0x64, 0x22, 0x3a, 0x20, 0x22, 0x79, 0x79, 0x79,
		0x79, 0x79, 0x79, 0x22, 0x2c, 0x20, 0x22, 0x74, 0x69, 0x6d, 0x65, 0x5f, 0x75, 0x6e, 0x69, 0x78,
		0x22, 0x3a, 0x20, 0x31, 0x37, 0x35, 0x31, 0x38, 0x37, 0x32, 0x30, 0x32, 0x37, 0x7d, 0x7d, 0x1a,
		0x45, 0x08, 0x00, 0x1a, 0x41, 0x7b, 0x22, 0x67, 0x72, 0x6f, 0x75, 0x70, 0x5f, 0x69, 0x64, 0x22,
		0x3a, 0x20, 0x22, 0x74, 0x68, 0x72, 0x65, 0x65, 0x22, 0x2c, 0x20, 0x22, 0x77, 0x6f, 0x72, 0x64,
		0x22, 0x3a, 0x20, 0x22, 0x7a, 0x7a, 0x7a, 0x7a, 0x7a, 0x7a, 0x22, 0x2c, 0x20, 0x22, 0x74, 0x69,
		0x6d, 0x65, 0x5f, 0x75, 0x6e, 0x69, 0x78, 0x22, 0x3a, 0x20, 0x31, 0x37, 0x35, 0x37, 0x34, 0x30,
		0x38, 0x39, 0x34, 0x39, 0x7d, 0x7d,
	}

	assert.Equal(t, dataBytes, rawBytes, "Need to ensure that the proto binary content is stable")

}
